# vigilant-journey

./: .gcloudignore  .gitignore  GEMINI.md  GUIDEBOOK.md  LICENSE  README.md  TODO.md  architecture.md  multi.md  playright.md  run_evaluation.sh  setup_workload_identity.sh  workflow.md
.github/workflows/: android-release.yml  mooncake-cicd.yml  pilot-cicd.yml
.idx/: dev.nix
app/google_search_agent/: agent.py
app/tests/: test_agent.py
dora/: README.md  pyproject.toml
dora/dora/: agent.py
kelvin/: pyproject.toml
kelvin/kelvin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kelvin/text_agent/: agent.py
korvo/: .dockerignore  Dockerfile  README.md  cache_model.py  main.py  pyproject.toml  server.py
korvo/tests/: test_server.py
mcp_server/: .dockerignore  Dockerfile  README.md  gcs_utils.py  main.py  mock_request.py  monte_carlo_simulation.py  prepare_data.py  pyproject.toml  requirements.txt  run_server_local.py  visualize_metrics.py
mcp_server/data_handling/: data_downloader.py  data_stream_simulator.py  telemetry_parser.py
mcp_server/mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp_server/models/: fuel_consumption_model.py  pace_prediction_model.py  tire_degradation_model.py  train_models.py
mcp_server/pipeline/: evaluator.py  module.py  pipeline.py
mcp_server/tests/: test_prepare_data.py  test_trainer_module.py
mcp_server/trained_models/: tire_degradation_model.pkl
mooncake/: .firebaserc  .gitignore  README.md  TESTING_NOTES.md  apphosting.yaml  firebase.json  global.d.ts  jest.config.ts  jest.env.js  jest.setup.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
mooncake/.github/workflows/: cicd.yml
mooncake/__mocks__/: AuthContext.js  react-markdown.tsx  streamdown.tsx
mooncake/__tests__/: Analytics.test.tsx  badge.test.tsx  chat-interface.test.tsx  landing-page.test.tsx  map-page.test.tsx  map.test.tsx  page.test.tsx  voice-controller.test.tsx
mooncake/__tests__/__snapshots__/: map.test.tsx.snap  page.test.tsx.snap
mooncake/__tests__/app/: page.test.tsx
mooncake/__tests__/app/map/: page.test.tsx
mooncake/app/: layout.tsx  page.tsx
mooncake/app/api/agent/: route.ts
mooncake/app/dora/: page.tsx
mooncake/app/map/: page.tsx
mooncake/components/: Analytics.tsx
mooncake/components/ui/: ProtectedLink.tsx  bar-visualizer.tsx  chat-interface.tsx  live-waveform.tsx  map.tsx  orb.tsx  response.tsx  voice-controller.tsx  waveform.tsx
mooncake/context/: AuthContext.tsx
mooncake/docs/: BUILD_NOTES.md
mooncake/e2e/: auth.setup.ts  auth.spec.ts  mock-auth.ts
mooncake/hooks/: use-id-token.ts
mooncake/lib/: audio.ts  firebase.ts  gmp.d.ts  use-audio.ts
mooncake/playwright-report/: index.html
mooncake/public/: pcm-player-processor.js  pcm-recorder-processor.js
mooncake/test-results/: .last-run.json
pilot/: .dockerignore  Dockerfile  Gemini.md  README.md  callback_mod.py  callbacks.py  documentation.md  jest.setup.js  main.py  mongo_con.py  package-lock.json  package.json  pyproject.toml  requirements.txt
pilot/.github/workflows/: cicd.yml
pilot/adk_multiagent_mcp_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pilot/data_handling/: data_downloader.py  data_loader.py
pilot/database/: mongo_db.py
pilot/database/cloud_sql/: cloud_sql_session.py
pilot/evaluation/: benchmark_prompts.py  evaluation_dataset.json
pilot/google_search_agent/: agent.py  evalsetea545e.evalset.json  knn_validator.py  mcp_tools.py  memory_tool.py  mercedes_jargon_corpus.json  orchestrator.py  prompt_tool.py  url_context_test.py  url_context_tool.py
pilot/models/: train_models.py
pilot/static/: index.html
pilot/static/css/: style.css
pilot/static/js/: app.js  app.test.js
pilot/strategy_engine/: monte_carlo_simulation.py
pilot/tests/: conftest.py  test_agent.py  test_audio.py  test_auth.py  test_data_handling.py  test_evaluation.py  test_main.py  test_models.py  test_mongo_db.py  test_prompt_tool.py  test_strategy_engine.py
trained_models/: fuel_consumption_model.pkl  pace_prediction_model.pkl
