[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server for the Hack the Track Monte Carlo Simulation"
requires-python = ">=3.11,<3.13"
dependencies = [
    "google-adk>=1.18.0",
    "numpy",
    "pandas",
    "scikit-learn>=1.7.2",
    "joblib",
    "requests"
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
]

[tool.setuptools]
py-modules = ["main", "monte_carlo_simulation"]

[tool.setuptools.packages.find]
include = ["data_handling*", "models*"]
