[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server for the Hack the Track Monte Carlo Simulation"
requires-python = ">=3.11,<3.13"
dependencies = [
    "google-adk>=1.18.0",
    "numpy",
    "pandas",
    "scikit-learn>=1.7.2",
    "joblib",
    "requests",
    "fastmcp==2.12.4",
    "google-cloud-storage>=3.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
]
dev = [
    "matplotlib>=3.8.0",
]

[tool.setuptools]
py-modules = ["main", "monte_carlo_simulation"]

[tool.setuptools.packages.find]
include = ["data_handling*", "models*"]
