[project]
name = "adk-multiagent-mcp-app"
version = "0.1.0"
description = "Add your description here"
# To fix the warning, either create a README.md file or remove the next line
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "certifi>=2025.10.5",
    "google-adk>=1.16.0",
    "google-adk[eval]>=1.15.0",
    "cloud-sql-python-connector>=1.18.5",
    "pg8000>=1.31.5",
    "sqlalchemy>=2.0.43",   
]

# Add this new section below
[tool.setuptools.packages.find]
where = ["."]
include = ["google_search_agent*"]
exclude = ["static"]