
[project]
name = "adk-multiagent-mcp-app"
version = "0.1.0"
description = "Add your description here"
# To fix the warning, either create a README.md file or remove the next line
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bleach>=6.3.0",
    "certifi>=2025.10.5",
    "cloud-sql-python-connector>=1.18.5",
    "dnspython",
    "fastapi",
    "firebase-admin>=6.5.0",
    "google-adk>=1.18.0",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "google-cloud-aiplatform",
    "google-cloud-logging",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "google-generativeai>=0.8.5",
    "gunicorn",
    "langchain",
    "langchain-community",
    "langchain-google-vertexai",
    "motor",
    "numpy",
    "pandas",
    "opentelemetry-api",
    "opentelemetry-exporter-gcp-trace",
    "opentelemetry-resourcedetector-gcp",
    "opentelemetry-sdk",
    "pg8000>=1.31.5",
    "pydub",
    "pymongo",
    "python-dotenv",
    "python-socketio",
    "requests",
    "scikit-learn>=1.7.2",
    "scipy",
    "sounddevice",
    "soundfile",
    "sqlalchemy>=2.0.43",
    "uvicorn",
    "websockets",
    "wikipedia",
]

[project.optional-dependencies]
test = [
    "httpx",
    "pytest>=8.4.2",
    "pytest-asyncio",
    "pytest-mock",
    "sentence-transformers>=5.1.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["google_search_agent*", "database*"]
exclude = ["static"]
